--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="center" style="padding: 10px;">
-        <img src="cohesion/favicon.png" alt="" style="transform: scale(0); animation: showdialog 1s ease-in-out forwards;">
+        <img src="cohesion/favicon.svg" alt="" style="transform: scale(0); animation: showdialog 1s ease-in-out forwards;">
         <h3 translate="no">Cohesion</h3>
         <p translate="no">1.95</p>
         Cohesion is a free and opensource markdown editor
