--- a/tools.html
+++ b/tools.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tools - Cohesion</title>
+    <link rel="shortcut icon" href="cohesion/favicon.svg" type="image/x-icon" />
     
     <!-- Primary Meta Tags -->
     <meta name="title" content="Tools - Cohesion">
@@ -61,7 +62,7 @@
     <header>
         <div>
             <a href="index.html" style="display: inline-flex; align-items: center; color: var(--text-color); text-decoration: none;">
-                <img src="cohesion/favicon.png" alt="" width="48">
+                <img src="cohesion/favicon.svg" alt="" width="48">
                 <h2 translate="no" class="header-text">Cohesion</h2>
             </a>
         </div>
