--- a/tools/markdown-table-editor.html
+++ b/tools/markdown-table-editor.html
@@ -128,7 +128,7 @@
     <header>
         <div>
             <a href="../index.html" style="display: inline-flex; align-items: center; color: var(--text-color); text-decoration: none;">
-                <img src="../cohesion/favicon.png" alt="" width="48">
+                <img src="../cohesion/favicon.svg" alt="" width="48">
                 <h2 translate="no" class="header-text">Cohesion</h2>
             </a>
         </div>
