--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Page not found - Cohesion</title>
-    <link rel="shortcut icon" href="cohesion/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="cohesion/favicon.svg" type="image/x-icon">
     <link rel="stylesheet" href="style/palette.css">
     <style>
         @import url("https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded");
