--- a/landing.html
+++ b/landing.html
@@ -45,7 +45,7 @@
     <header>
         <div>
             <a href="index.html" style="display: inline-flex; align-items: center; color: var(--text-color); text-decoration: none;">
-                <img src="cohesion/favicon.png" alt="" width="48">
+                <img src="cohesion/favicon.svg" alt="" width="48">
                 <h2 translate="no" class="header-text">Cohesion</h2>
             </a>
         </div>
@@ -175,7 +175,7 @@
     </div>
 
     <div class="note" id="note">
-        <p>Start writing now — you can return here anytime from the 'Learn' menu.</p>
+        <p>Start writing now — you can return here anytime from the 'Visit home page' menu.</p>
     </div>
 
     <script>
