--- a/about.html
+++ b/about.html
@@ -84,7 +84,7 @@
             `)" style="cursor: pointer;">Libraries and graphics
         </a> •
         <a onclick="promptMessage(`
-                <p>Copyright (C) 2025, F. Bergamin.</p>
+                <p>Copyright (C) ${new Date().getFullYear()}, Flarom.</p>
                 <p>This application comes with absolutely no warranty. See the <a href='https://www.gnu.org/licenses/gpl-3.0.html' target='_blank'>GNU General Public License, version 3 or later</a> for more details.</p>
             `)" style="cursor: pointer;">License
         </a>
