--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
         <link rel="stylesheet" href="style/palette.css" />
         <link rel="stylesheet" href="style/share.css" />
-        <link rel="stylesheet" href="style/editor.css" />
+        <link rel="stylesheet" href="style/preview.css" />
         <link rel="stylesheet" href="style/prompts.css" />
         <link rel="stylesheet" href="script/codemirror/lib/codemirror.css" />
         <link rel="stylesheet" href="script/codemirror/addon/hint/show-hint.css" />
@@ -43,6 +43,7 @@
         <script src="script/codemirror/addon/hint/anyword-hint.js"></script>
         <script src="script/codemirror/addon/hint/emoji-hint.js"></script>
         <script src="script/codemirror/addon/hint/command-hint.js"></script>
+        <script src="script/codemirror/addon/hint/resources-hint.js"></script>
         <script src="script/codemirror/addon/selection/active-line.js"></script>
         <script src="script/codemirror/addon/mode/simple.js"></script>
 
@@ -484,6 +485,16 @@
                 var token = cm.getTokenAt(cursor);
                 var line = cm.getLine(cursor.line);
                 var beforeCursor = line.slice(0, cursor.ch);
+
+                // display resource hints
+                var resMatch = beforeCursor.match(/resources\/[\w\-.]*$/);
+                if (resMatch) {
+                    cm.showHint({
+                        hint: CodeMirror.hint.resources,
+                        completeSingle: false,
+                    });
+                    return;
+                }
 
                 // display command hints 
                 var match = beforeCursor.match(/\/[\w\-]*$/);
