--- a/tools/markdown-reader.html
+++ b/tools/markdown-reader.html
@@ -32,7 +32,7 @@
     <link rel="stylesheet" href="../style/palette.css">
     <link rel="stylesheet" href="../style/share.css">
     <link rel="stylesheet" href="../style/landing.css">
-    <link rel="stylesheet" href="../style/editor.css">
+    <link rel="stylesheet" href="../style/preview.css">
     <link rel="stylesheet" href="../script/highlight/lib/highlight.css">
 
     <style>
