--- a/dialogs/settings.html
+++ b/dialogs/settings.html
@@ -11,11 +11,12 @@
                 border-radius: 32px;
                 cursor: pointer;
                 border: 0;
-                transition: border-radius 0.3s;
+                transition: border-radius 0.3s, filter 0.3s;
             }
 
             button.ball:hover {
                 border-radius: 15px;
+                filter: brightness(1.1);
             }
 
             button.ball.selected {
