added keyboard shortcut notation

--- a/index.html
+++ b/index.html
@@ -264,6 +264,7 @@
         <script src="script/showdown/extension/abbreviation.js"></script>
         <script src="script/showdown/extension/rubyText.js"></script>
         <script src="script/showdown/extension/progress.js"></script>
+        <script src="script/showdown/extension/kbd.js"></script>
         <script src="script/editorTools.js"></script>
         <script src="script/insert.js"></script>
         <script src="script/prompts.js"></script>
@@ -583,7 +584,8 @@
                     'definitionList', // definition list support
                     'abbreviation', // abbreviation support
                     'rubyText', // ruby text support
-                    'progress' // progress bar support
+                    'progress', // progress bar support
+                    'keys' // kbd support
                 ],
             });
 
