--- a/index.html
+++ b/index.html
@@ -267,6 +267,7 @@
         <script src="script/showdown/extension/rubyText.js"></script>
         <script src="script/showdown/extension/progress.js"></script>
         <script src="script/showdown/extension/kbd.js"></script>
+        <script src="script/showdown/extension/footnotes.js"></script>
         <script src="script/editorTools.js"></script>
         <script src="script/insert.js"></script>
         <script src="script/prompts.js"></script>
@@ -588,7 +589,8 @@
                     'abbreviation', // abbreviation support
                     'rubyText', // ruby text support
                     'progress', // progress bar support
-                    'keys' // kbd support
+                    'keys', // kbd support
+                    'footnotes', // footnotes support
                 ],
             });
 
