update syntax highlight

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         <script src="script/codemirror/overlay/markOverlay.js"></script>
         <script src="script/codemirror/overlay/underlineOverlay.js"></script>
         <script src="script/codemirror/overlay/admonitionOverlay.js"></script>
+        <script src="script/codemirror/overlay/fixCodeOverlay.js"></script>
         <script src="script/codemirror/addon/edit/closebrackets.js"></script>
         <script src="script/codemirror/addon/edit/continuelist.js"></script>
         <script src="script/codemirror/addon/search/searchcursor.js"></script>
@@ -352,6 +353,7 @@
             editor.addOverlay(markOverlay); // Overlay for displaying ==highlighted text==
             editor.addOverlay(underlineOverlay); // Overlay for displaying __underlined text__
             editor.addOverlay(admonitionOverlay); // Overlay for displaying admonition blocks
+            editor.addOverlay(fixCodeOverlay); // Overlay to fix fenced code blocks being marked as comments
 
             const editorMenu = document.getElementById("editorMenu"); // editor context menu
             const hrContextualSeparator = document.getElementById("contextual-selection-separator"); // horizontal line shown when contextual options are available
