fixed syntax highlighting for diff on built-in themes

--- a/dialogs/settings.html
+++ b/dialogs/settings.html
@@ -517,6 +517,10 @@
 --hljs-variable:        #9cdcfe;
 --hljs-title:           #4ec9b0;
 --hljs-link:            #d7ba7d;
+--hljs-positive:        #b5cea8;
+--hljs-positive-bg:     #b5cea833;
+--hljs-negative:        #f44747;
+--hljs-negative-bg:     #f4474733;
 
 /** Write your custom CSS here */
 `;
