update page metadata

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- this code sucks btw -->
+<!-- fork this project: https://github.com/flarom/cohesion -->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -8,22 +8,39 @@
         <title>New document</title>
         <link rel="shortcut icon" href="cohesion/favicon.svg" type="image/x-icon" />
 
-        <meta content="website" property="og:type" />
+        <!-- Primary Meta Tags -->
+        <meta name="title" content="Cohesion - Markdown Text Editor" />
+        <meta name="description" content="Create and edit Markdown documents easily with Cohesion, a free and opensource online Markdown text editor." />
+        <meta name="keywords" content="Cohesion, markdown, text, editor, free, opensource, online" />
+        <meta name="language" content="en">
+        <meta name="author" content="Cohesion Team">
+        <meta name="robots" content="index, follow">
 
-        <meta content="Cohesion Markdown Text Editor" name="title" />
-        <meta content="Cohesion Markdown Text Editor" property="og:title" />
-        <meta content="Cohesion is a free and opensource online markdown text editor" name="description" />
-        <meta content="Cohesion is a free and opensource online markdown text editor" property="og:description" />
+        <!-- Open Graph -->
+        <meta property="og:type" content="website">
+        <meta property="og:url" content="https://flarom.github.io/cohesion/">
+        <meta property="og:title" content="Cohesion - Markdown Text Editor">
+        <meta property="og:description" content="Create and edit Markdown documents easily with Cohesion, a free and opensource online Markdown text editor.">
+        <meta property="og:image" content="https://flarom.github.io/cohesion/cards/editor.png">
 
-        <meta content="Cohesion, markdown, text, editor, free, opensource" name="keywords" />
-        <meta content="https://flarom.github.io/cohesion/cohesion/scrshot.png" property="og:image" />
-        <meta content="https://flarom.github.io/cohesion" property="og:url" />
-        <meta content="index, follow" name="robots" />
+        <!-- Twitter -->
+        <meta property="twitter:card" content="summary_large_image">
+        <meta property="twitter:url" content="https://flarom.github.io/cohesion/">
+        <meta property="twitter:title" content="Cohesion - Markdown Text Editor">
+        <meta property="twitter:description" content="Create and edit Markdown documents easily with Cohesion, a free and opensource online Markdown text editor.">
+        <meta property="twitter:image" content="https://flarom.github.io/cohesion/cards/editor.png">
 
+        <!-- Canonical URL -->
+        <link rel="canonical" href="https://flarom.github.io/cohesion/">
+
+        <!-- PWA meta tags -->
+        <meta name="application-name" content="Cohesion">
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <meta content="#303030" name="theme-color" />
         <link rel="manifest" href="/manifest.json" />
+
+        <link rel="preconnect" href="https://fonts.gstatic.com">
 
         <link rel="stylesheet" href="style/palette.css" />
         <link rel="stylesheet" href="style/share.css" />
