--- a/tools.html
+++ b/tools.html
@@ -10,6 +10,7 @@
     <meta name="title" content="Tools - Cohesion">
     <meta name="description" content="Use Markdown with ease with the Cohesion Tool box, and try the Cohesion Markdown editor for free.">
     <meta name="keywords" content="">
+    <meta name="language" content="en">
     <meta name="author" content="Cohesion Team">
     <meta name="robots" content="index, follow">
     
@@ -18,17 +19,26 @@
     <meta property="og:url" content="https://flarom.github.io/cohesion/tools.html">
     <meta property="og:title" content="Tools - Cohesion">
     <meta property="og:description" content="Use Markdown with ease with the Cohesion Tool box, and try the Cohesion Markdown editor for free.">
-    <meta property="og:image" content="https://flarom.github.io/cohesion/tools.html">
+    <meta property="og:image" content="https://flarom.github.io/cohesion/cards/tools.png">
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://flarom.github.io/cohesion/tools.html">
     <meta property="twitter:title" content="Tools - Cohesion">
     <meta property="twitter:description" content="Use Markdown with ease with the Cohesion Tool box, and try the Cohesion Markdown editor for free.">
-    <meta property="twitter:image" content="https://flarom.github.io/cohesion/tools.html">
+    <meta property="twitter:image" content="https://flarom.github.io/cohesion/cards/tools.png">
 
     <!-- Canonical URL -->
     <link rel="canonical" href="https://flarom.github.io/cohesion/tools.html">
+
+    <!-- PWA meta tags -->
+    <meta name="application-name" content="Cohesion">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta content="#303030" name="theme-color" />
+    <link rel="manifest" href="/manifest.json" />
+
+    <link rel="preconnect" href="https://fonts.gstatic.com">
 
     <link rel="stylesheet" href="style/palette.css">
     <link rel="stylesheet" href="style/share.css">
