fixed image linking on cards

--- a/tools.html
+++ b/tools.html
@@ -19,14 +19,14 @@
     <meta property="og:url" content="https://flarom.github.io/cohesion/tools.html">
     <meta property="og:title" content="Tools - Cohesion">
     <meta property="og:description" content="Use Markdown with ease with the Cohesion Tool box, and try the Cohesion Markdown editor for free.">
-    <meta property="og:image" content="https://flarom.github.io/cohesion/cards/tools.png">
+    <meta property="og:image" content="https://flarom.github.io/cohesion/cohesion/cards/tools.png">
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://flarom.github.io/cohesion/tools.html">
     <meta property="twitter:title" content="Tools - Cohesion">
     <meta property="twitter:description" content="Use Markdown with ease with the Cohesion Tool box, and try the Cohesion Markdown editor for free.">
-    <meta property="twitter:image" content="https://flarom.github.io/cohesion/cards/tools.png">
+    <meta property="twitter:image" content="https://flarom.github.io/cohesion/cohesion/cards/tools.png">
 
     <!-- Canonical URL -->
     <link rel="canonical" href="https://flarom.github.io/cohesion/tools.html">
