--- a/tools/markdown-table-editor.html
+++ b/tools/markdown-table-editor.html
@@ -19,14 +19,14 @@
     <meta property="og:url" content="https://flarom.github.io/cohesion/tools/markdown-table-editor">
     <meta property="og:title" content="Markdown Table Editor - Cohesion">
     <meta property="og:description" content="Free online Markdown table editor with instant preview. Build tables effortlessly and try the Cohesion Markdown editor.">
-    <meta property="og:image" content="https://flarom.github.io/cohesion/cards/tools.png">
+    <meta property="og:image" content="https://flarom.github.io/cohesion/cohesion/cards/tools.png">
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://flarom.github.io/cohesion/tools/markdown-table-editor">
     <meta property="twitter:title" content="Markdown Table Editor - Cohesion">
     <meta property="twitter:description" content="Free online Markdown table editor with instant preview. Build tables effortlessly and try the Cohesion Markdown editor.">
-    <meta property="twitter:image" content="https://flarom.github.io/cohesion/cards/tools.png">
+    <meta property="twitter:image" content="https://flarom.github.io/cohesion/cohesion/cards/tools.png">
 
     <!-- Canonical URL -->
     <link rel="canonical" href="https://flarom.github.io/cohesion/tools/markdown-table-editor">
