--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>New document</title>
+        <title>Cohesion - Markdown Text Editor</title>
         <link rel="shortcut icon" href="cohesion/favicon.svg" type="image/x-icon" />
 
         <!-- Primary Meta Tags -->
